Chỉnh sửa file index của admin
Chỉnh sửa file index của admin

Hoàn thiện giao diện admin

--- a/admin/root/index.html
+++ b/admin/root/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- icon -->
     <link rel="stylesheet" href="../asset/font/themify-icons/themify-icons.css">
+    <script src="https://kit.fontawesome.com/3e5386a9e5.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="../asset/css/style.css">
 </head>
@@ -19,8 +20,7 @@
         <div id="contain">
             <!-- nav -->
             <div id="nav">
-                <i class="ti-menu"></i>
-
+                <i class="ti-menu" onclick="open_menu_sidebar()"></i>
                 <a href="#">
                     <p>Trang Chủ</p>
                 </a>
@@ -35,24 +35,156 @@
             </div>
             <!-- menu-sidebar -->
             <div id="menu-sidebar">
+                <i class="ti-close close-menu-sidebar" onclick="close_menu_sidebar()"></i>
                 <h1>admin</h1>
                 <hr>
                 <img src="../asset/img/avatar/avatar_admin.jpg" alt="avatar" class="avatar">
                 <h3 class="name-avatar">Tên Admin</h3>
                 <br>
                 <hr>
-                <i class="ti-dashboard"></i>
-                <h3>dashboard</h3>
-
+                <div class="dashboard">
+                    <a href="#">
+                        <i class="ti-dashboard"></i>
+                        <h3 class="content-dashboard">dashboard</h3>
+                    </a>
+                </div>
                 <hr>
-
-            </div>
-
-            <div id="body-contain">
+                <br>
+                <!-- content menu sidebar -->
+                <div class="content-menu-sidebar">
+                    <a href="" target="_blank">
+                        <i class="ti-calendar"></i>
+                        <h4 class="text-content-menu-sidebar">Sự Kiện</h4>
+                    </a>
+                </div>
+                <div class="content-menu-sidebar">
+                    <a href="" target="_blank">
+                        <i class="ti-money"></i>
+                        <h4 class="text-content-menu-sidebar">Doanh Thu</h4>
+                    </a>
+                </div>
+                <div class="content-menu-sidebar">
+                    <a href="" target="_blank">
+                        <i class="far fa-handshake"></i>
+                        <h4 class="text-content-menu-sidebar">Quản Lý Nhà Sản Xuất</h4>
+                    </a>
+                </div>
+                <div class="content-menu-sidebar">
+                    <a href="" target="_blank">
+                        <i class="ti-package"></i>
+                        <h4 class="text-content-menu-sidebar">Quản Lý Sản Phẩm</h4>
+                    </a>
+                </div>
+                <div class="content-menu-sidebar">
+                    <a href="" target="_blank">
+                        <i class="fas fa-users"></i>
+                        <h4 class="text-content-menu-sidebar">Khách Hàng</h4>
+                    </a>
+                </div>
                 
+            </div>
+            <div id="body-contain">
+                <h2 class="hello">Chào Admin , Chào mừng bạn trở lại !!!</h2>
+                <div id="infomation">
+                    <div class="info" id="info-user">
+                        <i class="fas fa-users icon-info"></i>
+                        <div class="content-info">
+                            <h2>2</h2>
+                            <p>USERS</p>
+                        </div>
+                    </div>
+                    <div class="info" id="info-products">
+                        <i class="ti-package icon-info"></i>
+                        <div class="content-info">
+                            <h2>10</h2>
+                            <p>Products</p>
+                        </div>
+                    </div>
+                    <div class="info" id="info-manufacters">
+                        <i class="far fa-handshake icon-info"></i>
+                        <div class="content-info">
+                            <h2>3</h2>
+                            <p>Manufacters</p>
+                        </div>
+                    </div>
+                    <div class="info" id="info-user">
+                        <i class="ti-money icon-info"></i>
+                        <div class="content-info">
+                            <h2>1M</h2>
+                            <p>Dollar</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="table-achive">
+                    <div id="vip-customer" class="table">
+                        <h2>Khách Hàng Vip</h2>
+                        <table>
+                            <tr>
+                                <th style="width: 30%;">Tên</th>
+                                <th>Ngày Sinh </th>
+                                <th>Số Điện Thoại</th>
+                                <th>Đã Mua</th>
+                            </tr>
+                            <tr>
+                                <td>Nguyễn Tấn Dũng</td>
+                                <td>16/08/2003</td>
+                                <td>0329817809</td>
+                                <td>2.000.000$</td>
+                            </tr>
+                            <tr>
+                                <td>Quang Pham</td>
+                                <td>2002</td>
+                                <td>none</td>
+                                <td>none</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="selling-product" class="table">
+                        <h2>Sản Phẩm Bán Chạy</h2>
+                        <table>
+                            <tr>
+                                <th style="width: 30%;">Mã Sản Xuất</th>
+                                <th>Tên</th>
+                                <th>Ngày bán</th>
+                                <th>Giá</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Xiaomi</td>
+                                <td>08/12/2021</td>
+                                <td>12.000$</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Apple</td>
+                                <td>08/12/2021</td>
+                                <td>30.000$</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    Đây là giao diện admin
+    <script>
+       function open_menu_sidebar(){
+            document.getElementById('menu-sidebar').style.visibility = "visible";
+            document.getElementById('nav').style.left = "16%";
+            document.getElementById('body-contain').style.marginLeft='20%';
+            let info = document.getElementsByClassName("info");
+            for(let i=0;i<info.length;i++){
+                info[i].style.marginLeft="15px";
+            }       
+        }
+       function close_menu_sidebar(){
+            document.getElementById('menu-sidebar').style.visibility = "hidden";
+            document.getElementById('nav').style.left = "0";
+            document.getElementById('body-contain').style.marginLeft='0';
+            let info = document.getElementsByClassName("info");
+            for(let i=0;i<info.length;i++){
+                info[i].style.marginLeft="50px";
+            }  
+        }
+    </script>
 </body>
 </html>
